# acoustic-hardness-classifier

./: .clang-format  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
data/raw/: DATA_SCHEMA.md
data/raw/phase0/: 01ad33e0-4731-42e0-ae42-4ad2193727b3.json  0558acf3-452f-4903-8607-be8b33b1fb2a.json  107bc3ff-3bd4-462f-b751-874a89db011e.json  10f81256-c994-4610-9108-105a140ee623.json  12604cc6-dd63-4883-bb36-1362eeac412b.json  13fa43a5-0540-411c-a3c2-ef5d536f8264.json  21b16d4d-75f6-4acb-b8fb-9ac6fef047f8.json  2c9fc4cc-eeb7-4311-8188-5ba1c8943d45.json  2e975bda-9941-46b8-ba6e-c7b533f8f79c.json  3776f72c-edeb-494e-acf0-aec72c70e0cd.json  38de31e8-6928-498b-a700-1b8de81b6c69.json  3d04f890-9b47-4875-8f53-fc33599e3a8b.json  42bc8a01-8ec7-45ff-a316-9c2cf524aee2.json  4b0bb4f6-9346-44ee-a1c0-7860c2992cc8.json  4b5fb9c5-93f5-4fd1-8578-207a1a29f941.json  537af85c-aa0d-47be-b330-1c4b99847e4a.json  53d81846-0b53-4fcd-ac07-ff64f6c12750.json  569bd03b-7251-4fb9-9943-492f1fb602eb.json  5d60edea-9048-48aa-8908-b76bfa794bd9.json  682d20f4-2913-4745-95dc-cb2516fd5b63.json  69a186a1-a967-4ce7-960c-e54e42b2b552.json  6f8f751e-2bfa-486c-a434-fd5962d84241.json  751eddb6-f892-4e9f-9eb8-c6dcf3607d0c.json  7e803e24-75be-4d75-b298-a474ac02e257.json  8265fc36-509f-47e9-a563-a5a50d2afaf3.json  8b44e55b-56fe-40ed-aec2-5a8ea2571266.json  8ffd6b3f-499a-4505-ad35-d4a70dee9800.json  92bd943f-514b-400d-99d3-e42aca90c850.json  948a658d-77a1-4be1-9e65-919e70d3953b.json  a56075ff-436b-4884-b577-d449d3a200ac.json  b1b84a3d-9cb1-41cc-b653-259c94c59a89.json  ba0e8c6d-19a9-4b03-a86f-3b8e7c3f95d8.json  c0d609ee-4afd-4b57-a5f4-226e0d2b2c1b.json  d5ee8342-9671-45d5-91fb-16df7c72b991.json  e11f2d30-732d-4004-b80e-94be74c6fcaf.json  f4af45b3-08d0-4233-9ad2-83b67e8f43dc.json
scripts/: collect.py
sketches/: recorder.ino
src/: collection.py
src/ahc/: analysis.py  cli.py  collection.py  features.py  signal_processing.py
tests/: test_analysis.py  test_cli.py  test_collection.py  test_features.py  test_signal_processing.py
