[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-hardness-classifier"
version = "0.1.1"

[project.scripts]
collect = "ahc.cli:run_collect"

[tool.pytest.ini_options]
# Markers for filtering tests
markers = [
    "integration: marks tests as integration (require external resources)",
]