[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-hardness-classifier"
version = "0.1.1"
dependencies = [
    "inputimeout==1.0.4",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pyserial==3.5",
    "scipy==1.18.0",
]

[project.optional-dependencies]
dev = [
    "clang-format==22.1.5",
    "cpplint==2.0.2",
    "pyinstaller==6.21.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
]

[project.scripts]
collect = "ahc.cli:run_collect"

[tool.pytest.ini_options]
# Markers for filtering tests
markers = [
    "integration: marks tests as integration (require external resources)",
]

[tool.ruff]
# Default is 88, but to be explicit
line-length = 88

[tool.ruff.lint]
# E/W = Pycodestyle (Flake8 style rules)
# F   = Pyflakes (Catches unused imports/variables and syntax errors)
# I   = Isort (Automatically cleans up and alphabetizes your imports!)
select = ["E", "F", "W", "I"]
ignore = []